--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "gatsby": "next",
+    "gatsby-plugin-feed": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
