--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "gatsby": "next",
     "gatsby-plugin-feed": "next",
+    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
