--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-styled-components": "^1.6.3",
     "gatsby": "next",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-styled-components": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.4.5"
   },
   "scripts": {
     "build": "gatsby build",
