--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "babel-plugin-styled-components": "^1.6.3",
-    "gatsby": "next",
+    "babel-plugin-styled-components": "^1.6.4",
+    "gatsby": "^2.0.0-rc.15",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-offline": "^2.0.0-rc.6",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-styled-components": "next",
-    "gatsby-source-filesystem": "next",
+    "gatsby-source-filesystem": "^2.0.1-rc.2",
     "gatsby-transformer-remark": "next",
     "lodash": "^4.17.10",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.4.5"
   },
